Add login style and checkbox/radio images

--- a/Resources/public/scss/_form.scss
+++ b/Resources/public/scss/_form.scss
@@ -3,3 +3,6 @@
 }
 
 .checkbox label, .radio label{font-weight: 300;}
+.icheckbox_square-blue, .iradio_square-blue{
+    background: url('../images/black.png');
+}
