--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -3,3 +3,10 @@
 @import 'navbar';
 @import 'form';
 @import 'button';
+
+a{
+    color: #777;
+    &:hover, &:focus, &:active{
+        color: #333;
+    }
+}
