--- a/Resources/public/scss/_table.scss
+++ b/Resources/public/scss/_table.scss
@@ -1,3 +1,12 @@
+.sonata-action-element{
+    background: $success;
+    color: #FFF!important;
+    margin: 0 10px;
+    &:hover, &:active, &:focus{
+        background: darken($success,5%)!important;
+    }
+}
+
 table.table{
     th{
         background-image: none;
