--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -11,4 +11,11 @@
         color: #FFF;
     }
 
+    .box-footer{
+        input[type="submit"]{
+            background: $success;
+            border-color: $success;
+        }
+    }
+
 }
