--- a/Resources/public/scss/_login.scss
+++ b/Resources/public/scss/_login.scss
@@ -1,10 +1,14 @@
+body{height: 100%!important;}
+
 body.login-page, .register-page{
     background: #333;
 }
 
+.login-logo, .register-logo{display: none;}
+
 .login-logo a, .register-logo a{
     color: #F2F2F2;
-    &:hover{
+    &:hover, &:active, &:focus{
         color: #F2F2F2;
     }
 }
