Remove slogan from sidebar

--- a/Resources/views/standard_layout.html.twig
+++ b/Resources/views/standard_layout.html.twig
@@ -2,6 +2,10 @@
 
 {% block body_attributes %}class="sonata-bc skin-black skin-just fixed"{% endblock %}
 
+{% block side_bar_after_nav %}
+    
+{% endblock %}
+
 
 {% block sonata_page_content_nav %}
     {% if _tab_menu is not empty or _actions is not empty or _list_filters_actions is not empty %}
