--- a/Resources/public/scss/_table.scss
+++ b/Resources/public/scss/_table.scss
@@ -15,10 +15,16 @@ table.table{
 //Just show icons
 .view_link, .edit_link, .delete_link{
     font-size: 0;
+    margin: 0 4px;
     i{font-size: 14px;}
 }
 
 .delete_link, .delete_link:hover, .delete_link:focus{
-    background: #cc0000;
+    background: $danger;
+    border-color: $danger;
     color: #FFF;
+    &:hover, &:active, &:focus{
+        background: darken($danger,5%);
+        border-color: darken($danger,5%);
+    }
 }
