--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -75,7 +75,7 @@
 
 //Level 1
 .skin-just .sidebar-menu>li:hover>a, .skin-just .sidebar-menu>li.active>a{
-    background: #F2F2F2;
+    background: #D4D4D4;
     color: #000;
 }
 .skin-just .sidebar a{
