--- a/Resources/public/scss/_AdminLTE.scss
+++ b/Resources/public/scss/_AdminLTE.scss
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic);
-
 
 
 html,
@@ -11,7 +9,7 @@ body {
   height: 100%;
 }
 body {
-  font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: Helvetica Neue, Arial, sans-serif;
   font-weight: 400;
   overflow-x: hidden;
   overflow-y: auto;
@@ -87,7 +85,7 @@ body {
 .content-wrapper,
 .right-side {
   min-height: 100%;
-  background-color: #ecf0f5;
+  background-color: #ebebeb;
   z-index: 800;
 }
 .main-footer {
@@ -2254,12 +2252,13 @@ a:focus {
 }
 .btn-success {
   background-color: $success;
-  border-color: #008d4c;
+  border-color: $success;
 }
 .btn-success:hover,
 .btn-success:active,
 .btn-success.hover {
-  background-color: #008d4c;
+  background-color: darken($success, 5%);
+  border-color: darken($success, 5%);
 }
 .btn-info {
   background-color: #00c0ef;
@@ -2418,7 +2417,7 @@ a:focus {
   border-color: #d73925;
 }
 .alert-warning {
-  border-color: #e08e0b;
+  border-color: $warning;
 }
 .alert-info {
   border-color: #00acd6;
