--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -80,14 +80,23 @@
 }
 .skin-just .sidebar a{
     color: #FFF;
+    i{display: none;}
+}
+
+.skin-just .sidebar-menu li{
+    border-top: 1px solid #3a3a3a;
 }
 
 //Menu level 2
 .skin-just .sidebar-menu>li>.treeview-menu{
     background: #333;
-    a{color: #888;}
+    padding: 0;
+    a{
+        color: #888;padding: 10px 5px 10px 17px;
+    }
     li:hover a, li.active a{
         color: #FFF;
-        text-decoration: underline;
+        background: #4e4e4e;
+        text-decoration: none;
     }
 }
