--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -1,6 +1,7 @@
 .box{
     border-top: 0;
     border: 0;
+    border-radius: 0;
     box-shadow: none;
     border-top-color: #ebebeb!important;
 
@@ -10,7 +11,7 @@
         padding: 10px 0;
     }
 
-    .box-body{padding: 2em;}
+    .box-body{padding: 2em;border-radius: 0;}
 
     .box-footer{
         input[type="submit"]{
