--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -15,7 +15,6 @@
 }
 .navbar-nav>.user-menu>.dropdown-menu{
     width: 197px;
-    box-shadow: -1px 2px 1px 1px rgba(0, 0, 0, 0.1);
     border-top: 1px solid #dedede;
 }
 .user-footer{
@@ -35,7 +34,6 @@
 .main-sidebar{
     padding-top: 0;
     z-index: 2000;
-    box-shadow: 3px 0px 10px 0px rgba(0, 0, 0, 0.23);
 }
 
 .skin-just .sidebar-form,
@@ -70,16 +68,18 @@
     background-color: $primary-color;
 }
 .skin-just .sidebar-form input[type="text"], .skin-just .sidebar-form .btn{
-    background-color: #F2F2F2;
+    background-color: #222;
 }
+.skin-just .sidebar-form{border-color: transparent;}
+.skin-just .sidebar-form .btn{padding: 6px 12px;}
 
 //Level 1
 .skin-just .sidebar-menu>li:hover>a, .skin-just .sidebar-menu>li.active>a{
-    background: #FFF;
-    color: #000;
+    background: #676767;
+    color: #FFF;
 }
 .skin-just .sidebar a{
-    color: #FFF;
+    color: #f2f2f2;
     i{display: none;}
 }
 
@@ -92,11 +92,13 @@
     background: #333;
     padding: 0;
     a{
-        color: #888;padding: 10px 5px 10px 17px;
+        color: #888;padding: 7px 5px 7px 30px;
     }
     li:hover a, li.active a{
         color: #FFF;
-        background: #4e4e4e;
         text-decoration: none;
     }
 }
+
+
+.navbar{border-radius: 0;}
