--- a/Resources/public/scss/_table.scss
+++ b/Resources/public/scss/_table.scss
@@ -24,6 +24,7 @@ table.table{
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th{
     vertical-align: middle;
     padding: 15px 8px!important;
+    border: 0;
 }
 
 .sonata-ba-list td.sonata-ba-list-field a.sonata-link-identifier{
