Filterbar - fixed positioning fix

--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -102,3 +102,8 @@
 
 
 .navbar{border-radius: 0;}
+.navbar.stuck{
+    margin-left: 0!important;
+    width: 100%!important;
+    max-width: 87.95em;
+}
