Processed all open troll cards

--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -9,6 +9,8 @@
 
 body{
     color: #222;
+    background: #ebebeb;
+    padding: 0 0 85px 0;
 }
 
 a{
@@ -51,10 +53,4 @@ a{
 
 .skin-just .wrapper{
     background: #ebebeb;
-}
-
-.form-actions.stuck{
-    margin-left: 0;
-    background: #d2d2d2;
-    padding: 1.5em;
 }
