--- a/Resources/views/CRUD/base_edit_form.html.twig
+++ b/Resources/views/CRUD/base_edit_form.html.twig
@@ -66,8 +66,8 @@
 
             {% block formactions %}
 
-                <div class="sonata-ba-form-actions  form-actions">
-                <div class="containerdd">
+                <div class="sonata-ba-form-actions  form-actions js-formactions is-stuck">
+                <div class="fixed-button__wrapper">
                     <div class="row">
                         <div class="col-xs-12">
 {% block sonata_form_actions %}
