--- a/Resources/public/scss/_form.scss
+++ b/Resources/public/scss/_form.scss
@@ -21,8 +21,6 @@
     &.checked, &.hover{background-position: -34px 0;}
 }
 
-
-
 //Select2
 .select2-container-active .select2-choice, 
 .select2-container-multi.select2-container-active .select2-choices,
@@ -34,4 +32,27 @@
 
 .select2-results .select2-highlighted{
     background: #333;
+}
+
+
+
+//Fixed form
+.form-actions.stuck{
+    position: static;
+    margin-left: 0;
+    
+}
+
+.form-actions.is-stuck{
+    background: #d3d3d3;
+    padding: 1.5em;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    .fixed-button__wrapper{
+        max-width: 90em;
+        margin: 0 auto;
+        padding: 0 15px;
+    }
 }
