--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -69,6 +69,10 @@ a{
 }
 
 //Layout
+.skin-just .main-header .navbar{
+    background-color: #f2f2f2;
+}
+
 .main-sidebar, .content-wrapper{
     position: static!important;
     float: left;
@@ -77,7 +81,7 @@ a{
 .main-sidebar{ position: relative!important; }
 
 .main-sidebar{
-    width: 230px;height: 100vh;
+    width: 315px;height: 100vh;
     .slimScrollDiv{
         background-color: #222;
         height: 100vh!important;
@@ -85,11 +89,11 @@ a{
         top: 0;
         left: 0;
         bottom: 0;
-        max-width: 230px;
+        max-width: 315px;
     }
 }
 .content-wrapper{
-    max-width: calc(100% - 230px);
+    max-width: calc(100% - 315px);
     section{
         margin: 0 auto;
         max-width: 90em;
