Chore: Refactor breadcrumbs #2

--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -75,7 +75,7 @@
 
 //Level 1
 .skin-just .sidebar-menu>li:hover>a, .skin-just .sidebar-menu>li.active>a{
-    background: #676767;
+    background: #1a1a1a;
     color: #FFF;
 }
 .skin-just .sidebar a{
