Refactor: Fixed bar with buttons at end of form

--- a/Resources/public/scss/_form.scss
+++ b/Resources/public/scss/_form.scss
@@ -42,10 +42,10 @@
     background: #d3d3d3;
     padding: 2em;
     margin: 0 auto!important;
-    max-width: 87.95em;
+    max-width: calc(60em - 30px);
 
     width: auto !important;
-    left: 245px;
+    left: 330px;
     right: 15px;
 
 }
