Refactor: Various button styles added

--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -13,8 +13,8 @@
 
     .box-footer{
         input[type="submit"]{
-            background: $success;
-            border-color: $success;
+            background: #000;
+            border-color: #000;
         }
     }
 }
