--- a/Resources/public/scss/_button.scss
+++ b/Resources/public/scss/_button.scss
@@ -1,20 +1,20 @@
 .btn{border-radius: 0;padding: 10px 20px;}
 
 .btn-primary{
-    background-color: $primary-color;
-    border-color: $primary-color;
+    background-color: #000;
+    border-color: #000;
     &:hover{
-        background-color: lighten($primary-color, 20%);
-        border-color: lighten($primary-color, 20%);
+        background-color: lighten(#000, 20%);
+        border-color: lighten(#000, 20%);
     }
 }
 
 
 .add_records:not(.dropdown-menu) > li > a{
-    background: $success!important;
+    background: #000!important;
     color: #FFF!important;
     &:hover, &:active, &:focus{
-        background: darken($success,5%)!important;
+        background: darken(#000,5%)!important;
     }
 }
 
