--- a/Resources/public/scss/_table.scss
+++ b/Resources/public/scss/_table.scss
@@ -31,13 +31,22 @@ table.table{
     font-weight: normal;
 }
 
+.sonata-ba-list td:last-of-type{
+    position: relative;
+    .btn-group{ position: static; }
+}
 .sonata-ba-list tr th:first-child{width: 30px;}
+
+.box-body.table-responsive,
+table.sonata-ba-list td{
+    overflow: visible;
+}
 
 //Just show icons
 .view_link, .edit_link, .delete_link{
     font-size: 0;
     margin: 0 4px;
-    i{font-size: 14px;}
+    // i{font-size: 14px;}
 }
 
 .view_link, .edit_link{
@@ -48,13 +57,30 @@ table.table{
         border-color: #777!important;
     }
 }
-
-.delete_link{
+.btn-group>.btn.edit_link{
+    display: none;
+}
+.btn-group>.btn.delete_link{
+    position: absolute;
+    right: -58px;
+    top: 0;
+    bottom: 0;
     background: $danger;
     border-color: $danger;
-    color: #FFF!important;
+    color: #fff !important;
+    padding: 15px 20px;
+    margin: 0;
+    display: none;
     &:hover, &:active, &:focus{
         background: darken($danger,5%);
         border-color: darken($danger,15%);
     }
+
+    i{
+        font-size: 20px;
+    }
+}
+
+table tr:hover .btn.delete_link{
+    display: block;
 }
