--- a/Resources/views/CRUD/base_edit_form.html.twig
+++ b/Resources/views/CRUD/base_edit_form.html.twig
@@ -122,10 +122,10 @@
                             </button>
                         {% endif %}
                         {% if admin.id(object) is not null %}
-                            <button type="submit" class="btn btn-success" name="btn_update_and_edit"> {{ 'btn_update_and_edit_again'|trans({}, 'SonataAdminBundle') }}</button>
+                            <button type="submit" class="btn btn-primary" name="btn_update_and_edit"> {{ 'btn_update_and_edit_again'|trans({}, 'SonataAdminBundle') }}</button>
 
                             {% if admin.hasRoute('list') and admin.hasAccess('list') %}
-                                <button type="submit" class="btn btn-success" name="btn_update_and_list">{{ 'btn_update_and_return_to_list'|trans({}, 'SonataAdminBundle') }}</button>
+                                <button type="submit" class="btn btn-primary" name="btn_update_and_list">{{ 'btn_update_and_return_to_list'|trans({}, 'SonataAdminBundle') }}</button>
                             {% endif %}
 
                             {% if admin.hasRoute('delete') and admin.hasAccess('delete', object) %}
