--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -21,6 +21,39 @@
 .box.box-primary{ border-top-color: #ddd; }
 .box.box-danger .box-header{background: $danger;color:#FFF;}
 
+
+.nav-tabs-custom{
+    border-radius: 0;
+}
+
+.nav-tabs-custom>.nav-tabs{
+    border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
+}
+
 .nav-tabs-custom>.nav-tabs>li.active{
     border-top-color: #000;
+}
+
+.nav-tabs-custom>.nav-tabs>li.active>a, .nav-tabs-custom>.nav-tabs>li:hover>a{
+    background-color: #f2f2f2;
+}
+
+.nav-tabs-custom>.nav-tabs li a:active{
+    box-shadow: inset 0 0 1em rgba(0, 0, 0, 0.2);
+}
+
+.nav-tabs-custom>.nav-tabs>li{ 
+    border-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+}
+
+.nav-tabs-custom>.nav-tabs>li>a{
+    padding: 20px 25px;
+}
+
+.nav-tabs-custom>.nav-tabs li + li{
+    border-left: 1px solid #ddd;
+    margin-right: 0;
 }
