Chore: Fixed type-o

--- a/Resources/views/CRUD/base_edit_form.html.twig
+++ b/Resources/views/CRUD/base_edit_form.html.twig
@@ -58,7 +58,7 @@
 
                     <div class="box">
                         <div class="box-header">
-                            <h4 class="box-title">Last editted by</h4>
+                            <h4 class="box-title">Last edited by</h4>
                         </div>
                         <div class="box-body">
                             <table class="table">
