--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -102,6 +102,7 @@
 
 
 .navbar{border-radius: 0;}
+.navbar-right{ margin-right: -30px; margin-left: 30px; }
 .navbar.stuck{
     margin:0 auto!important;
     width: 100%!important;
