--- a/Resources/public/scss/_button.scss
+++ b/Resources/public/scss/_button.scss
@@ -1,6 +1,8 @@
-.btn{border-radius: 0;padding: 10px 20px;}
-
-.btn-primary{
+.btn{
+    border-radius: 0;padding: 10px 20px;
+    i{ display: none; }
+}
+.btn-primary, .btn-success{
     background-color: #000;
     border-color: #000;
     &:hover{
@@ -12,19 +14,37 @@
 .btn-danger{
     background-color: $danger;
     border-color: $danger;
-    &:hover, &:active, &:focus{
+    &:hover{
         background: lighten($danger,5%)!important;
+        border-color: lighten($danger,5%)!important;
     }
 }
 
+// .btn-primary{
+//     background-color: #000;
+//     border-color: #000;
+//     &:hover{
+//         background-color: lighten(#000, 20%);
+//         border-color: lighten(#000, 20%);
+//     }
+// }
 
-.add_records:not(.dropdown-menu) > li > a{
-    background: #000!important;
-    color: #FFF!important;
-    &:hover, &:active, &:focus{
-        background: lighten(#000,20%)!important;
-    }
-}
+// .btn-danger{
+//     background-color: $danger;
+//     border-color: $danger;
+//     &:hover, &:active, &:focus{
+//         background: lighten($danger,5%)!important;
+//     }
+// }
+
+
+// .add_records:not(.dropdown-menu) > li > a{
+//     background: #000!important;
+//     color: #FFF!important;
+//     &:hover, &:active, &:focus{
+//         background: lighten(#000,20%)!important;
+//     }
+// }
 
 
 .sort_button{
@@ -48,6 +68,6 @@
 }
 
 
-.btn-seperator{
-    margin: 0 10px;
-}
+// .btn-seperator{
+//     margin: 0 10px;
+// }
