Refactor: Clean up unnecessary files

--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -14,9 +14,9 @@
     }
 
     // Hide profile menu if loggedin user is an external user
-    // &.skin-just-external-login .user-footer div:first-child {
-    //     display:none;
-    // }
+    &.skin-just-external-login .user-footer div:first-child {
+        display:none;
+    }
 }
 
 .logo img{ display: none; }
