Chore: Change TH color

--- a/Resources/public/scss/_table.scss
+++ b/Resources/public/scss/_table.scss
@@ -12,3 +12,7 @@ table.sonata-ba-list tr td a{
         color: #000;
     }
 }
+
+th.sonata-ba-list-field-header-order-desc a, th.sonata-ba-list-field-header-order-asc a{
+    color: #000;
+}
