--- a/Resources/views/standard_layout.html.twig
+++ b/Resources/views/standard_layout.html.twig
@@ -7,49 +7,30 @@
 {% endblock %}
 
 
-{% block sonata_page_content_nav %}
-    {% if _tab_menu is not empty or _actions is not empty or _list_filters_actions is not empty %}
-        <nav class="navbar navbar-default" role="navigation">
-            <div class="container-fluid">
-                {% block tab_menu_navbar_header %}
-                    {% if _navbar_title is not empty %}
-                        <div class="navbar-header">
-                            <a class="navbar-brand" href="#">{{ _navbar_title|raw }}</a>
-                        </div>
-                    {% endif %}
+{% block sonata_top_nav_menu %}
+    {#{% if app.user and is_granted('ROLE_SONATA_ADMIN') %}#}
+        <div class="navbar-custom-menu">
+            <ul class="nav navbar-nav">
+                {% block sonata_top_nav_menu_add_block %}
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-plus-square fa-fw" aria-hidden="true"></i> <i class="fa fa-caret-down" aria-hidden="true"></i>
+                        </a>
+                        {% include sonata_admin.adminPool.getTemplate('add_block') %}
+                    </li>
                 {% endblock %}
+                {% block sonata_top_nav_menu_user_block %}
+                    <li class="dropdown user-menu">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-user fa-fw" aria-hidden="true"></i> <i class="fa fa-caret-down" aria-hidden="true"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            {% include sonata_admin.adminPool.getTemplate('user_block') %}
+                        </ul>
+                    </li>
+                {% endblock %}
+            </ul>
+        </div>
+    {#{% endif %}#}
+{% endblock %}
 
-                <div class="navbar-collapse">
-                    {% if _tab_menu is not empty %}
-                        <div class="navbar-left">
-                            {{ _tab_menu|raw }}
-                        </div>
-                    {% endif %}
-
-                    
-
-                    {% block sonata_admin_content_actions_wrappers %}
-                        {% if _actions|replace({ '<li>': '', '</li>': '' })|trim is not empty %}
-                            <ul class="nav navbar-nav navbar-right add_records">
-                            {% if _actions|split('</a>')|length > 2 %}
-                                <li class="dropdown sonata-actions">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ 'link_actions'|trans({}, 'SonataAdminBundle') }} <b class="caret"></b></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        {{ _actions|raw }}
-                                    </ul>
-                                </li>
-                            {% else %}
-                                {{ _actions|raw }}
-                            {% endif %}
-                            </ul>
-                        {% endif %}
-                    {% endblock sonata_admin_content_actions_wrappers %}
-
-                    {% if _list_filters_actions is not empty %}
-                        {{ _list_filters_actions|raw }}
-                    {% endif %}
-                </div>
-            </div>
-        </nav>
-    {% endif %}
-{% endblock sonata_page_content_nav %}
