--- a/Resources/public/scss/_table.scss
+++ b/Resources/public/scss/_table.scss
@@ -3,7 +3,7 @@ table.sonata-ba-list th{
 }
 
 .sonata-ba-list td.sonata-ba-list-field a.sonata-link-identifier{
-    font-weight: normal;
+    font-weight: 300;
 }
 
 table.sonata-ba-list tr td a{
