--- a/Resources/views/standard_layout.html.twig
+++ b/Resources/views/standard_layout.html.twig
@@ -3,34 +3,17 @@
 {% block body_attributes %}class="sonata-bc skin-black skin-just fixed {{ not app.user.id ? 'skin-just-external-login' : '' }}"{% endblock %}
 
 {% block side_bar_after_nav %}
-    
-{% endblock %}
-
-
-{% block sonata_top_nav_menu %}
-    {#{% if app.user and is_granted('ROLE_SONATA_ADMIN') %}#}
-        <div class="navbar-custom-menu">
-            <ul class="nav navbar-nav">
-                {% block sonata_top_nav_menu_add_block %}
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <i class="fa fa-plus-square fa-fw" aria-hidden="true"></i> <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        </a>
-                        {% include sonata_admin.adminPool.getTemplate('add_block') %}
-                    </li>
-                {% endblock %}
-                {% block sonata_top_nav_menu_user_block %}
-                    <li class="dropdown user-menu">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <i class="fa fa-user fa-fw" aria-hidden="true"></i> <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        </a>
-                        <ul class="dropdown-menu dropdown-user">
-                            {% include sonata_admin.adminPool.getTemplate('user_block') %}
-                        </ul>
-                    </li>
-                {% endblock %}
-            </ul>
-        </div>
-    {#{% endif %}#}
+    {% spaceless %}
+    <ul class="form-logout">
+        <li>
+            <span>We are JUST</span>
+        </li>
+        <li>
+            <a href="">
+                <span class="accesibility">Log out</span>
+            </a>
+        </li>
+    </ul>
+    {% endspaceless %}
 {% endblock %}
 
