--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -22,6 +22,8 @@
     }
 }
 
+.bg-aqua{ background-color: #000!important; }
+
 .logo img{ display: none; }
 .content-wrapper{ 
     padding-right: 50px; 
@@ -77,6 +79,8 @@
         }
     }
 }
+
+
 
 .icheckbox_square-blue, .iradio_square-blue{
     background: url('../images/black.png');
